--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 *{
     margin: 0;
     padding: 0;
+    font-family: "Poppins", serif;
 }
 
 @layer base {
@@ -73,13 +77,68 @@
 }
 
 .navbar{
-  @apply bg-black sticky z-20 top-0 flex items-start justify-center w-[30%] min-h-screen py-2 
+  @apply bg-gray-900 sticky z-20 top-0 flex items-start w-[30%] min-h-screen py-2 flex-col
 }
 
 .softskill-h2{
-  @apply text-center p-2 text-2xl md:text-2xl font-semibold font-sans;
+  @apply text-center p-2 text-2xl md:text-2xl font-semibold font-sans poppins-medium;
 }
 
 .softskill-card{
-  @apply h-[400px] md:h-[500px] w-full md:w-[430px] transition-colors duration-1000;
+  @apply h-[400px] md:h-[400px] w-full md:w-[430px] transition-colors duration-1000 ;
+}
+
+
+.poppins-thin {
+  font-family: "Poppins", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.poppins-extralight {
+  font-family: "Poppins", serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.poppins-light {
+  font-family: "Poppins", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.poppins-regular {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.poppins-semibold {
+  font-family: "Poppins", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: "Poppins", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.poppins-extrabold {
+  font-family: "Poppins", serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.poppins-black {
+  font-family: "Poppins", serif;
+  font-weight: 900;
+  font-style: normal;
 }
